--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "start": "run nodemon index.js",
+    "dev": "node index.js"
   },
   "author": "ibrahim abd el rahman",
   "license": "ISC",
