--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "mongoose": "^6.5.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
+    "stripe": "^10.6.0",
+    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   }
 }
