--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon index.js",
-    "start": "run nodemon index.js",
+    "start": "node index.js",
     "dev": "node index.js"
   },
   "author": "ibrahim abd el rahman",
