--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "ibrahim abd el rahman",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1209.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
